# barbershop2

./: .env.example  .gitignore  db.sqlite3  db.sqlite3-shm  db.sqlite3-wal  pyproject.toml
barbershop/: settings.py  urls.py
core/: admin.py  apps.py  context_processor.py  forms.py  models.py  signals.py  telegram_bot.py  views.py
core/migrations/: 0001_initial.py  0002_remove_order_date_updated_alter_master_services_and_more.py  0003_alter_master_options_alter_order_options_and_more.py  0004_remove_master_reviews.py  0005_review_status_alter_review_client_name_and_more.py  0006_alter_review_photo.py  0007_alter_review_is_published.py
static/css/: 404.css  admin.css  entry_form_style.css  main.css
static/js/: main.js
templates/: 404.html  base.html  entry_form.html  include_footer.html  include_nav_menu.html  include_order_card.html  landing.html  masters.html  order_class_form.html  order_detail.html  order_page.html  orders_list.html  password_reset_email.html  profile.html  profile_update_form.html  review_class_form.html  services.html  services_views.html  thanks.html  thanks_form.html  user_message.html  users_login_registr.html
templates/includes/: include_footer.html  include_nav_menu.html  include_order_card.html  include_order_form.html  include_reviews_carousel.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
